--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Flex:wght@300;400;700&family=Roboto+Serif:wght@300;400&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
     <script src="/js/index.js" type="module"></script>
     <title>CodeWithSpooks</title>
   </head>
