style update. scalability

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="navLogo">
           <img src="/images/spookyBanner.png" alt="Spookyrumble text logo" />
         </div>
-        <div class="navMenu">BURRGER</div>
+        <!-- <div class="navMenu">BURRGER</div> -->
       </nav>
     </header>
     <main>
