--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                 </p>
               </div>
             </dialog>
-            <form class="form" action="#">
+            <form id="form" class="form" action="#">
               <label for="name">Your name</label>
               <input
                 id="name"
