page viewheight adjustments

--- a/index.html
+++ b/index.html
@@ -29,16 +29,21 @@
     </header>
     <main>
       <section class="indexWindow">
-        <div class="sectionHeader">
+        <!-- <div class="indexHeader">
           <h1>What is this?</h1>
-        </div>
+        </div> -->
         <div class="intro">
+          <!-- <div> -->
+          <div class="indexHeader">
+            <h1>What is this?</h1>
+          </div>
           <div>
             <img
               src="/images/avatar_sefie.png"
               alt="avatar selfie of creator"
             />
           </div>
+          <!-- </div> -->
           <div>
             <p>
               My Portfolio!<br />
@@ -50,13 +55,19 @@
             </p>
             <button class="cta">portfolio</button>
           </div>
+          <div class="logoImgRack">
+            <img
+              src="/images/Group10_logoBigHor.png"
+              alt="rack of logos showing HTML, CSS, JS and Figma logos"
+            />
+          </div>
         </div>
-        <div class="logoImgRack">
+        <!-- <div class="logoImgRack">
           <img
             src="/images/Group10_logoBigHor.png"
             alt="rack of logos showing HTML, CSS, JS and Figma logos"
           />
-        </div>
+        </div> -->
       </section>
       <section class="portfolio">
         <div class="sectionHeader">
