--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
           <div class="contactTextCont">
             <p>
               If you want to reach out to me for any reason. Please use the
-              information in the contact form.
+              contact form.
             </p>
             <br />
             <p>I am very much looking forward to hearing from you.</p>
