--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
               of the work I have done over my first year as a front-end
               development student.
             </p>
-            <button class="cta">portfolio</button>
+            <div class="ctaRack">
+              <button id="portF" class="cta">portfolio</button>
+              <button id="about" class="cta">About me</button>
+              <button id="contact" class="cta">Contact</button>
+            </div>
           </div>
           <div class="logoImgRack">
             <img
@@ -77,7 +81,7 @@
         <div class="projectContainer">
           <div>
             <img
-              src="/images/rainydayImg.png"
+              src="/images/rainydaysImg.png"
               alt="picture showing rainydays index page"
             />
             <div class="projectLinks">
@@ -239,7 +243,7 @@
             />
           </div>
           <div>
-            <p>
+            <p class="selfiePara">
               Hi Again! Like I started out saying, my name is Hans or in some
               circles more commonly known as Spookyrumble. I have been a gamer
               most of my life so as you probably guessed, Spookyrumble is my
@@ -248,14 +252,14 @@
               stream on Twitch under the same name and I am a part of many
               communities all over the world.
             </p>
-            <p>
+            <p class="selfiePara">
               Personally I am a very calm and collected person. I work on a very
               logical (to me) state and I guess you can call me an observer and
               thinker more than a talker/speaker. I prefer to not take up to
               much space in a room but I will voice up if I feel the need and
               that is usually if I think someone could need help in some way.
             </p>
-            <p>
+            <p class="selfiePara">
               Personally I am a very calm and collected person. I work on a very
               logical (to me) state and I guess you can call me an observer and
               thinker more than a talker/speaker. I prefer to not take up to
@@ -265,7 +269,7 @@
           </div>
         </div>
         <div class="selfieBottomText">
-          <p>
+          <p class="selfiePara">
             After having worked more or less in the car industry since 2003 with
             everything from the floor as a mechanic and car detailer to the
             parts department but mostly in the customer service department I
@@ -288,7 +292,7 @@
         </div>
       </section>
     </main>
-    <footer>
+    <footer class="contact">
       <div class="sectionHeader">
         <h1>Contact</h1>
       </div>
@@ -358,6 +362,7 @@
       </div>
       <div>
         <img
+          id="spookyScrollTop"
           class="spookyLogo"
           src="/images/spookyJasonLogo.png"
           alt="Spookyrumble baby jason logo"
