--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
           </div>
         </div>
       </div>
-      <div>
+      <div class="topNav">
         <img
           id="spookyScrollTop"
           class="spookyLogo"
