--- a/index.html
+++ b/index.html
@@ -247,30 +247,35 @@
               Hi Again! Like I started out saying, my name is Hans or in some
               circles more commonly known as Spookyrumble. I have been a gamer
               most of my life so as you probably guessed, Spookyrumble is my
-              gamer-name going back to since the release of the XBox 360 when I
-              started playing FPS games and I needed a tag. I occatiionally
+              gamer-name going back to the release of the XBox 360 when I
+              started playing FPS games and I needed a tag. I occationally
               stream on Twitch under the same name and I am a part of many
               communities all over the world.
             </p>
+            <br />
             <p class="selfiePara">
               Personally I am a very calm and collected person. I work on a very
-              logical (to me) state and I guess you can call me an observer and
+              logical level (to me) and I guess you can call me an observer and
               thinker more than a talker/speaker. I prefer to not take up to
               much space in a room but I will voice up if I feel the need and
               that is usually if I think someone could need help in some way.
             </p>
+            <br />
             <p class="selfiePara">
-              Personally I am a very calm and collected person. I work on a very
-              logical (to me) state and I guess you can call me an observer and
-              thinker more than a talker/speaker. I prefer to not take up to
-              much space in a room but I will voice up if I feel the need and
-              that is usually if I think someone could need help in some way.
+              Most of my days are spent on my daughters. August 2023 they are
+              all in school which is nice. Taking this time right now to do
+              these studies have been pure gold and I am in a very happy place.
+              Biggest dream is to find some awesome collagues after I graduate
+              so I can keep learning. I am enjoying development alot as it
+              speaks to my need to know how things work but also the arts and
+              crafts it holds. There are almost literally no limits to what we
+              can do!
             </p>
           </div>
         </div>
         <div class="selfieBottomText">
           <p class="selfiePara">
-            After having worked more or less in the car industry since 2003 with
+            After having worked in the car industry more or less since 2003 with
             everything from the floor as a mechanic and car detailer to the
             parts department but mostly in the customer service department I
             found myself wanting to pursuing a dream of doing something I found
@@ -283,11 +288,11 @@
             night stand radio just to see what it looked like inside. I am
             absolutely loving learning about development and working on these
             projects figuring out how to do what I want to do is so much fun and
-            I feel like this is the perfect match for me. I’m only sorry I
-            didn’t start this sooner but while this waited I have had a long
-            good life this far. Full of experience and my three wonderful
-            daughters and my wife. May the rest of it be filled with awesome
-            projects and creative people to work with!
+            I feel like this is the perfect match for me. I am only sorry I did
+            not start this sooner but while this waited I have had a long good
+            life this far. Full of experience and my three wonderful daughters
+            and my wife. May the rest of it be filled with awesome projects and
+            creative people to work with!
           </p>
         </div>
       </section>
