--- a/index.html
+++ b/index.html
@@ -263,13 +263,13 @@
             <br />
             <p class="selfiePara">
               Most of my days are spent on my daughters. August 2023 they are
-              all in school which is nice. Taking this time right now to do
-              these studies have been pure gold and I am in a very happy place.
-              Biggest dream is to find some awesome collagues after I graduate
-              so I can keep learning. I am enjoying development alot as it
-              speaks to my need to know how things work but also the arts and
-              crafts it holds. There are almost literally no limits to what we
-              can do!
+              all in school as my 5 year old starts 1st grade, which is nice.
+              Taking this time right now to do these studies have been pure gold
+              and I am in a very happy place. Biggest dream is to find some
+              awesome collagues after I graduate so I can keep learning. I am
+              enjoying development alot as it speaks to my need to know how
+              things work but also the arts and crafts it holds. There are
+              almost literally no limits to what we can do!
             </p>
           </div>
         </div>
