--- a/index.html
+++ b/index.html
@@ -22,9 +22,20 @@
     <header>
       <nav>
         <div class="navLogo">
-          <img src="/images/spookyBanner.png" alt="Spookyrumble text logo" />
+          <img
+            id="spookyMenuBtn"
+            src="/images/spookyBanner.png"
+            alt="Spookyrumble text logo"
+          />
         </div>
-        <!-- <div class="navMenu">BURRGER</div> -->
+        <dialog id="navMenu" class="dialog hide">
+          <div class="navBtn">
+            <button id="spookyScrollTop" class="cta">home</button>
+            <button id="portF" class="cta">portfolio</button>
+            <button id="about" class="cta">About me</button>
+            <button id="contact" class="cta">Contact</button>
+          </div>
+        </dialog>
       </nav>
     </header>
     <main>
@@ -54,9 +65,9 @@
               development student.
             </p>
             <div class="ctaRack">
-              <button id="portF" class="cta">portfolio</button>
-              <button id="about" class="cta">About me</button>
-              <button id="contact" class="cta">Contact</button>
+              <button id="indexPortF" class="cta">portfolio</button>
+              <button id="IndexAbout" class="cta">About me</button>
+              <button id="IndexContact" class="cta">Contact</button>
             </div>
           </div>
           <div class="logoImgRack">
@@ -247,7 +258,7 @@
               Hi Again! Like I started out saying, my name is Hans or in some
               circles more commonly known as Spookyrumble. I have been a gamer
               most of my life so as you probably guessed, Spookyrumble is my
-              gamer-name going back to the release of the XBox 360 when I
+              gamer name going back to the release of the XBox 360 when I
               started playing FPS games and I needed a tag. I occationally
               stream on Twitch under the same name and I am a part of many
               communities all over the world.
@@ -267,9 +278,9 @@
               Taking this time right now to do these studies have been pure gold
               and I am in a very happy place. Biggest dream is to find some
               awesome collagues after I graduate so I can keep learning. I am
-              enjoying development alot as it speaks to my need to know how
+              enjoying development a lot as it speaks to my need to know how
               things work but also the arts and crafts it holds. There are
-              almost literally no limits to what we can do!
+              almost barely any limits to what we can do!
             </p>
           </div>
         </div>
@@ -278,7 +289,7 @@
             After having worked in the car industry more or less since 2003 with
             everything from the floor as a mechanic and car detailer to the
             parts department but mostly in the customer service department I
-            found myself wanting to pursuing a dream of doing something I found
+            found myself wanting to pursue a dream of doing something I found
             very interesting and fun. Like I said before, I have always been a
             gamer and very much interested in tech I wanted to go the IT way and
             started researching what branch I thought would suit me best. The
