added nav functionality

--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
       </div>
       <div class="topNav">
         <img
-          id="spookyScrollTop"
+          id="spookyScrollHome"
           class="spookyLogo"
           src="/images/spookyJasonLogo.png"
           alt="Spookyrumble baby jason logo"
