menu function update

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             alt="Spookyrumble text logo"
           />
         </div>
-        <dialog id="navMenu" class="dialog hide">
+        <dialog id="navMenu" class="dialog">
           <div class="navBtn">
             <button id="spookyScrollTop" class="cta">home</button>
             <button id="portF" class="cta">portfolio</button>
@@ -40,11 +40,7 @@
     </header>
     <main>
       <section class="indexWindow">
-        <!-- <div class="indexHeader">
-          <h1>What is this?</h1>
-        </div> -->
         <div class="intro">
-          <!-- <div> -->
           <div class="indexHeader">
             <h1>What is this?</h1>
           </div>
@@ -54,7 +50,6 @@
               alt="avatar selfie of creator"
             />
           </div>
-          <!-- </div> -->
           <div>
             <p>
               My Portfolio!<br />
@@ -77,12 +72,6 @@
             />
           </div>
         </div>
-        <!-- <div class="logoImgRack">
-          <img
-            src="/images/Group10_logoBigHor.png"
-            alt="rack of logos showing HTML, CSS, JS and Figma logos"
-          />
-        </div> -->
       </section>
       <section class="portfolio">
         <div class="sectionHeader">
