--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             alt="Spookyrumble text logo"
           />
         </div>
-        <dialog id="navMenu" class="dialog hide">
+        <dialog id="navMenu" class="dialog dummy">
           <div class="navBtn">
             <button id="spookyScrollTop" class="cta">home</button>
             <button id="portF" class="cta">portfolio</button>
