--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             alt="Spookyrumble text logo"
           />
         </div>
-        <dialog id="navMenu" class="dialog dummy">
+        <dialog id="navMenu" class="dialog">
           <div class="navBtn">
             <button id="spookyScrollTop" class="cta">home</button>
             <button id="portF" class="cta">portfolio</button>
@@ -373,6 +373,9 @@
           alt="Spookyrumble baby jason logo"
         />
       </div>
+      <p style="color: white">
+        &copy; Created by Spookyrumble, June 2023. All rights reserved
+      </p>
     </footer>
   </body>
 </html>
