styles and spelling update

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="navLogo">
           <img
             id="spookyMenuBtn"
-            src="/images/spookyBanner.png"
+            src="/images/spookyMenu.png"
             alt="Spookyrumble text logo"
           />
         </div>
@@ -51,8 +51,8 @@
             />
           </div>
           <div>
+            <h2 class="myPortf">My Portfolio!</h2>
             <p>
-              My Portfolio!<br />
               Hello there! I'm Hans. <br />I embarked on an exciting journey of
               learning and creativity at the age of 40. With this website I
               intend to give you a little insight to who I am and show you some
@@ -269,7 +269,7 @@
               awesome collagues after I graduate so I can keep learning. I am
               enjoying development a lot as it speaks to my need to know how
               things work but also the arts and crafts it holds. There are
-              almost barely any limits to what we can do!
+              barely any limits to what we can do!
             </p>
           </div>
         </div>
@@ -346,7 +346,7 @@
                 id="subj"
                 type="text"
                 name="your-subject"
-                placeholder="Pleace write a subject"
+                placeholder="Please write a subject"
                 required
               />
               <label for="message">Your message</label>
