--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
-      name="desctiption"
+      name="description"
       content="Welcome to my portfolio! My name is Hans and this website will showcase some skills I have accuired during my first year as a Front-End Delvelopment student."
     />
+    <link rel="icon" type="image/png" href="images/spookyJasonLogo.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,7 +17,7 @@
     />
     <link rel="stylesheet" href="/css/style.css" />
     <script src="/js/index.js" type="module"></script>
-    <title>CodeWithSpooks</title>
+    <title>Spookyrumble's portfolio</title>
   </head>
   <body>
     <header>
@@ -81,7 +82,7 @@
         <div class="projectContainer">
           <div>
             <img
-              src="/images/rainydaysImg.png"
+              src="/images/image_rainydays.jpg"
               alt="picture showing rainydays index page"
             />
             <div class="projectLinks">
@@ -119,7 +120,7 @@
         <div class="projectContainer">
           <div>
             <img
-              src="/images/csmImg.png"
+              src="/images/image_CMS.jpg"
               alt="picture showing csm index page"
             />
             <div class="projectLinks">
@@ -154,7 +155,7 @@
         <div class="projectContainer">
           <div>
             <img
-              src="/images/beerImg.png"
+              src="/images/image_beer.jpg"
               alt="picture showing beer recipe index page"
             />
             <div class="projectLinks">
@@ -186,7 +187,7 @@
         <div class="projectContainer">
           <div>
             <img
-              src="/images/ittIng.png"
+              src="/images/image_insidethetrip.jpg"
               alt="picture showing Inside the trip index page"
             />
             <div class="projectLinks">
@@ -306,7 +307,7 @@
           <div class="contactTextCont">
             <p>
               If you want to reach out to me for any reason. Please use the
-              contact form.
+              contact form and I will get back to you as soon as possible.
             </p>
             <br />
             <p>I am very much looking forward to hearing from you.</p>
