--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Welcome to my portfolio! My name is Hans and this website will showcase some skills I have accuired during my first year as a Front-End Delvelopment student."
     />
-    <meta property="og:image" content="images/spookyJasonLogo.png" />
+    <meta property="og:image" content="images//metaLogo.png" />
     <link rel="icon" type="image/png" href="images/spookyJasonLogo.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
