--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
         <div class="projectContainer">
           <div>
             <img
+              class="portfolioImg"
               src="/images/image_rainydays.jpg"
               alt="picture showing rainydays index page"
             />
@@ -121,6 +122,7 @@
         <div class="projectContainer">
           <div>
             <img
+              class="portfolioImg"
               src="/images/image_CMS.jpg"
               alt="picture showing csm index page"
             />
@@ -156,6 +158,7 @@
         <div class="projectContainer">
           <div>
             <img
+              class="portfolioImg"
               src="/images/image_beer.jpg"
               alt="picture showing beer recipe index page"
             />
@@ -188,6 +191,7 @@
         <div class="projectContainer">
           <div>
             <img
+              class="portfolioImg"
               src="/images/image_insidethetrip.jpg"
               alt="picture showing Inside the trip index page"
             />
