--- a/index.html
+++ b/index.html
@@ -88,20 +88,15 @@
               alt="picture showing rainydays index page"
             />
             <div class="projectLinks">
-              <ul>
-                <a
-                  target="_blank"
-                  href="https://github.com/HMAsp/HTML-CSS_CA_HMA_2022"
-                  >view Github repo</a
-                >
-              </ul>
-              <ul>
-                <a
-                  target="_blank"
-                  href="https://chic-lollipop-939ca8.netlify.app"
-                  >visit website on netlify</a
-                >
-              </ul>
+              <a
+                target="_blank"
+                href="https://github.com/HMAsp/HTML-CSS_CA_HMA_2022"
+                >view Github repo</a
+              >
+              <br />
+              <a target="_blank" href="https://chic-lollipop-939ca8.netlify.app"
+                >visit website on netlify</a
+              >
             </div>
           </div>
           <div>
@@ -127,18 +122,15 @@
               alt="picture showing csm index page"
             />
             <div class="projectLinks">
-              <ul>
-                <a
-                  target="_blank"
-                  href="https://github.com/HMAsp/2022-12-16_semester_project1_HMAsp"
-                  >view Github repo</a
-                >
-              </ul>
-              <ul>
-                <a target="_blank" href="https://2022aug-sp1-hma.netlify.app"
-                  >visit website on netlify</a
-                >
-              </ul>
+              <a
+                target="_blank"
+                href="https://github.com/HMAsp/2022-12-16_semester_project1_HMAsp"
+                >view Github repo</a
+              >
+              <br />
+              <a target="_blank" href="https://2022aug-sp1-hma.netlify.app"
+                >visit website on netlify</a
+              >
             </div>
           </div>
           <div>
@@ -163,18 +155,13 @@
               alt="picture showing beer recipe index page"
             />
             <div class="projectLinks">
-              <ul>
-                <a target="_blank" href="https://github.com/HMAsp/hma_js1_ca"
-                  >view Github repo</a
-                >
-              </ul>
-              <ul>
-                <a
-                  target="_blank"
-                  href="https://soft-basbousa-03b99f.netlify.app"
-                  >visit website on netlify</a
-                >
-              </ul>
+              <a target="_blank" href="https://github.com/HMAsp/hma_js1_ca"
+                >view Github repo</a
+              >
+              <br />
+              <a target="_blank" href="https://soft-basbousa-03b99f.netlify.app"
+                >visit website on netlify</a
+              >
             </div>
           </div>
           <div>
@@ -196,20 +183,17 @@
               alt="picture showing Inside the trip index page"
             />
             <div class="projectLinks">
-              <ul>
-                <a
-                  target="_blank"
-                  href="https://github.com/Noroff-FEU-Assignments/project-exam-1-HMAsp"
-                  >view Github repo</a
-                >
-              </ul>
-              <ul>
-                <a
-                  target="_blank"
-                  href="https://friendly-moonbeam-149a6a.netlify.app"
-                  >visit website on netlify</a
-                >
-              </ul>
+              <a
+                target="_blank"
+                href="https://github.com/Noroff-FEU-Assignments/project-exam-1-HMAsp"
+                >view Github repo</a
+              >
+              <br />
+              <a
+                target="_blank"
+                href="https://friendly-moonbeam-149a6a.netlify.app"
+                >visit website on netlify</a
+              >
             </div>
           </div>
           <div>
